# TerminalFlir.Mlx90640

./: CMakeLists.txt  README.md  main.cpp  palette.c  palette.cpp  palette.h  palette.hpp  readframeraw.cpp
io/: i2cunix.cpp  i2cunix.hpp
mlx90640/: mlx90640.cpp  mlx90640.h  mlx90640util.cpp  mlx90640util.h
term/: color.hpp  rawterminal.cpp  rawterminal.hpp  termutils.c  termutils.h
